--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,7 @@ dependencies:
   flutter_typeahead: ^5.2.0
   path_provider: ^2.1.5
   connectivity_plus: ^6.1.3
+  firebase_core: ^3.13.0
   
 
 dev_dependencies:
