--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,9 @@ dependencies:
   path_provider: ^2.1.5
   connectivity_plus: ^6.1.3
   firebase_core: ^3.13.0
+  contained_tab_bar_view: ^0.8.0
+  flutter_pdfview: ^1.4.0+1
+  share_plus: ^10.0.0
   
 
 dev_dependencies:
